objects/Ops_NPS_Follow_Up__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ops NPS Follow Ups</relationshipLabel>
        <relationshipName>Ops_NPS_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicable_Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicable Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Ops NPS Follow Ups</relationshipLabel>
        <relationshipName>Ops_NPS_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arbitration__c</fullName>
        <formula>OR(
    CONTAINS( Name , &apos;Arbitration&apos;),
    CONTAINS(  Owner_Profile__c  , &apos;Arbitration&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Arbitration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_to_Me_ID__c</fullName>
        <label>Assign to Me ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile__c</fullName>
        <formula>Dealer_Contact__r.MobilePhone</formula>
        <label>Contact Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Dealer_Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Outreach__c</fullName>
        <label>Date of Last Outreach</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NPS_Follow_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Date__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Multiple_Ops_Tag_Directive__c</fullName>
        <label>Multiple Ops Tag Directive</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Customer_Comments__c</fullName>
        <label>NPS Customer Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>NPS</label>
        <referenceTo>DelightedInc__Delighted_Response__c</referenceTo>
        <relationshipName>NPS_Follow_Ups</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ops_Tag__c</fullName>
        <label>Ops Tag(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Notes__c</fullName>
        <label>Most Recent Outreach Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Profile__c</fullName>
        <formula>Owner:User.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payments__c</fullName>
        <formula>OR(
    CONTAINS( Name, &apos;Payments&apos;),
    CONTAINS(  Owner_Profile__c , &apos;Payments&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Department__c</fullName>
        <formula>IF(

  Titles__c = TRUE, &apos;Titles&apos;,
IF( 
   Arbitration__c = TRUE, &apos;Arbitration&apos;,
IF(
    Transport__c = TRUE, &apos;Transport&apos;,
IF(
    Payments__c = TRUE, &apos;Payments&apos;,&apos;Multiple&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <formula>NPS__r.DelightedInc__Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Not Needed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Requires Reassignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titles__c</fullName>
        <formula>OR(  CONTAINS( Name , &apos;Titles&apos;) ,
      CONTAINS( Owner_Profile__c , &apos;Title&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titles</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transport__c</fullName>
        <formula>OR(
   CONTAINS( Name , &apos;Transport&apos;),
   CONTAINS(  Owner_Profile__c  , &apos;Transport&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transport</label>
        <type>Checkbox</type>
    </fields>
    <label>Ops NPS Follow Up</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Reporting_Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Arbitration_Ops_NPS_Follow_Ups_Open</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Arbitration</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <filters>
            <field>Owner_Profile__c</field>
            <operation>contains</operation>
            <value>Arbitration</value>
        </filters>
        <label>Arbitration Ops NPS Follow Ups - Open</label>
    </listViews>
    <listViews>
        <fullName>Multiple_Ops_NPS_Follow_Ups</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Multiple</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <label>Multiple Ops NPS Follow Ups - Open</label>
    </listViews>
    <listViews>
        <fullName>My_Ops_NPS_Follow_Ups</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Ops NPS Follow Ups</label>
    </listViews>
    <listViews>
        <fullName>Payments_Ops_NPS_Follow_Ups_Open</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Payments</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <filters>
            <field>Owner_Profile__c</field>
            <operation>contains</operation>
            <value>Payment</value>
        </filters>
        <label>Payments Ops NPS Follow Ups - Open</label>
    </listViews>
    <listViews>
        <fullName>Titles_Ops_NPS_Follow_Ups_Open</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Titles</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <label>Titles Ops NPS Follow Ups - Open</label>
    </listViews>
    <listViews>
        <fullName>Transport_Ops_NPS_Follow_Ups_Open</fullName>
        <booleanFilter>(1 OR 3) AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Dealer_Contact__c</columns>
        <columns>Follow_Up_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Transport</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending,In Progress</value>
        </filters>
        <filters>
            <field>Owner_Profile__c</field>
            <operation>contains</operation>
            <value>Transport</value>
        </filters>
        <label>Transport Ops NPS Follow Ups - Open</label>
    </listViews>
    <nameField>
        <label>NPS Follow Up Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ops NPS Follow Ups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>